--- a/data/quantum_compute/4_1_circuits.html
+++ b/data/quantum_compute/4_1_circuits.html
@@ -6,6 +6,20 @@
         </p>
     </div>
 
+    <!-- Analogie -->
+    <div class="bg-purple-50 p-6 rounded-xl border border-purple-100">
+        <h3 class="text-xl font-bold text-purple-800 mb-3">💡 Analogie : La Partition Musicale</h3>
+        <p class="text-gray-700">
+            • <strong>Lignes (Portée) :</strong> Les Qubits.
+            <br>
+            • <strong>Notes :</strong> Les Portes (H, X, CNOT).
+            <br>
+            • <strong>Accords :</strong> Opérations simultanées ou intriquées.
+            <br>
+            L'ordinateur joue cette partition pour produire un résultat final (la mesure).
+        </p>
+    </div>
+
     <!-- Anatomie -->
     <div class="bg-white p-6 rounded-xl shadow-md">
         <h3 class="text-xl font-bold text-gray-800 mb-4">Anatomie d'un Circuit</h3>
@@ -27,53 +41,12 @@
         </div>
     </div>
 
-    <!-- Exemple : État de Bell -->
-    <div class="bg-gradient-to-r from-indigo-50 to-white p-8 rounded-2xl shadow-md border border-indigo-100">
-        <h3 class="text-2xl font-bold text-indigo-900 mb-6">Exemple : Créer l'Intrication (État de Bell)</h3>
-        <p class="text-gray-700 mb-4">
-            L'algorithme "Hello World" du quantique. Il transforme $|00\rangle$ en $\frac{|00\rangle +
-            |11\rangle}{\sqrt{2}}$.
-        </p>
-
-        <div class="flex flex-col md:flex-row items-center justify-center gap-8 bg-white p-6 rounded-xl shadow-sm">
-            <div class="font-mono text-lg">
-                <div class="flex items-center mb-4">
-                    <span class="mr-2">q0: |0⟩</span>
-                    <span class="w-8 h-0.5 bg-gray-400"></span>
-                    <span class="w-8 h-8 border border-black flex items-center justify-center bg-white">H</span>
-                    <span class="w-8 h-0.5 bg-gray-400"></span>
-                    <span class="w-4 h-4 rounded-full bg-black mx-[-2px] z-10"></span>
-                    <span class="w-8 h-0.5 bg-gray-400"></span>
-                </div>
-                <div class="flex items-center">
-                    <span class="mr-2">q1: |0⟩</span>
-                    <span class="w-16 h-0.5 bg-gray-400"></span>
-                    <span
-                        class="w-8 h-8 border border-black rounded-full flex items-center justify-center bg-white text-xl">+</span>
-                    <span class="w-8 h-0.5 bg-gray-400"></span>
-                </div>
-                <!-- Vertical line for CNOT -->
-                <div class="absolute w-0.5 h-12 bg-black ml-[10.5rem] mt-[-3.5rem]"></div>
-            </div>
-
-            <div class="text-sm text-gray-600">
-                <ol class="list-decimal space-y-2 pl-4">
-                    <li><strong>Hadamard sur q0 :</strong> Crée une superposition $(|0\rangle + |1\rangle)/\sqrt{2}$.
-                    </li>
-                    <li><strong>CNOT (q0 contrôlant q1) :</strong>
-                        <ul>
-                            <li>Si q0 est 0, q1 reste 0 → $|00\rangle$</li>
-                            <li>Si q0 est 1, q1 devient 1 → $|11\rangle$</li>
-                        </ul>
-                    </li>
-                </ol>
-            </div>
-        </div>
-    </div>
-
     <!-- Interactive Builder -->
     <div class="bg-gray-900 p-6 rounded-xl shadow-inner">
         <h3 class="text-white font-bold mb-4">Constructeur de Circuit Interactif</h3>
+        <p class="text-gray-400 text-sm mb-4">
+            Ajoutez des portes H (Superposition), X (NOT) ou Z (Phase) pour voir comment l'état évolue.
+        </p>
         <div id="circuit-builder" class="min-h-[200px] bg-white rounded border border-gray-700 p-4">
             <!-- Viz injected by initQuantumCircuits -->
             <p class="text-gray-400 text-center mt-10">Chargement du constructeur...</p>
