--- a/data/quantum_ml/4_3_qml.html
+++ b/data/quantum_ml/4_3_qml.html
@@ -12,50 +12,69 @@
         <p class="text-gray-600 mb-4">
             C'est l'équivalent quantique d'un réseau de neurones.
         </p>
-        <div class="flex flex-col gap-4">
-            <div class="flex items-center gap-4 border-l-4 border-blue-400 pl-4">
-                <div class="font-bold text-blue-600">1. Encodage (Feature Map)</div>
-                <div class="text-sm text-gray-600">Transformer les données classiques $x$ en état quantique
-                    $|\phi(x)\rangle$.</div>
-            </div>
-            <div class="flex items-center gap-4 border-l-4 border-purple-400 pl-4">
-                <div class="font-bold text-purple-600">2. Ansatz (Modèle)</div>
-                <div class="text-sm text-gray-600">Un circuit avec des paramètres ajustables $\theta$ (rotations).</div>
-            </div>
-            <div class="flex items-center gap-4 border-l-4 border-red-400 pl-4">
-                <div class="font-bold text-red-600">3. Mesure & Coût</div>
-                <div class="text-sm text-gray-600">On mesure pour obtenir une prédiction et on calcule l'erreur.</div>
-            </div>
-        </div>
-    </div>
-
-    <!-- Feature Maps -->
-    <div class="bg-gradient-to-br from-gray-50 to-white p-8 rounded-2xl shadow-md border border-gray-200">
-        <h3 class="text-2xl font-bold text-gray-800 mb-4">Le Kernel Trick Quantique</h3>
-        <p class="text-gray-700 mb-4">
-            L'espace de Hilbert est gigantesque. En envoyant nos données dedans, on peut séparer des classes qui sont
-            mélangées dans l'espace classique.
-        </p>
-        <p class="text-sm text-gray-500 italic">
-            C'est comme passer de la 2D à la 3D pour séparer deux anneaux entrelacés.
-        </p>
-    </div>
-
-    <!-- Viz -->
-    <div class="bg-gray-900 p-6 rounded-xl shadow-inner">
-        <h3 class="text-white font-bold mb-4">Visualisation : Classification Quantique</h3>
-        <div class="flex flex-col md:flex-row gap-4">
-            <div id="qml-viz"
-                class="flex-1 h-64 bg-black rounded border border-gray-700 flex items-center justify-center">
-                <!-- Viz injected by initQML -->
-                <p class="text-gray-500">Frontière de Décision</p>
-            </div>
-            <div class="w-full md:w-1/3 text-gray-400 text-sm">
-                <p>Les points rouges et bleus sont séparés par une surface complexe générée par le circuit quantique.
+        <div class="space-y-8">
+            <div class="bg-white p-8 rounded-2xl shadow-lg border-l-8 border-pink-600">
+                <h2 class="text-3xl font-extrabold text-pink-800 mb-6">4.3 Quantum Machine Learning (QML)</h2>
+                <p class="text-lg text-gray-700 leading-relaxed">
+                    La fusion de l'IA et du Quantique. Utiliser des circuits quantiques comme des réseaux de neurones.
                 </p>
-                <button class="mt-4 w-full px-4 py-2 bg-pink-600 text-white rounded hover:bg-pink-500">Entraîner
-                    (Simulé)</button>
+            </div>
+
+            <!-- VQC -->
+            <div class="bg-white p-6 rounded-xl shadow-md">
+                <h3 class="text-xl font-bold text-gray-800 mb-4">Variational Quantum Circuits (VQC)</h3>
+                <p class="text-gray-600 mb-4">
+                    C'est l'équivalent quantique d'un réseau de neurones.
+                </p>
+                <div class="flex flex-col gap-4">
+                    <div class="flex items-center gap-4 border-l-4 border-blue-400 pl-4">
+                        <div class="font-bold text-blue-600">1. Encodage (Feature Map)</div>
+                        <div class="text-sm text-gray-600">Transformer les données classiques $x$ en état quantique
+                            $|\phi(x)\rangle$.</div>
+                    </div>
+                    <div class="flex items-center gap-4 border-l-4 border-purple-400 pl-4">
+                        <div class="font-bold text-purple-600">2. Ansatz (Modèle)</div>
+                        <div class="text-sm text-gray-600">Un circuit avec des paramètres ajustables $\theta$
+                            (rotations). C'est un <strong>PQC (Parameterized Quantum Circuit)</strong>.</div>
+                    </div>
+                    <div class="flex items-center gap-4 border-l-4 border-red-400 pl-4">
+                        <div class="font-bold text-red-600">3. Mesure & Coût</div>
+                        <div class="text-sm text-gray-600">On mesure pour obtenir une prédiction et on calcule l'erreur.
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Feature Maps -->
+            <div class="bg-gradient-to-br from-gray-50 to-white p-8 rounded-2xl shadow-md border border-gray-200">
+                <h3 class="text-2xl font-bold text-gray-800 mb-4">Le Kernel Trick Quantique</h3>
+                <p class="text-gray-700 mb-4">
+                    L'espace de Hilbert est gigantesque. En envoyant nos données dedans, on peut séparer des classes qui
+                    sont
+                    mélangées dans l'espace classique.
+                </p>
+                <p class="text-sm text-gray-500 italic">
+                    C'est comme passer de la 2D à la 3D pour séparer deux anneaux entrelacés.
+                </p>
+            </div>
+
+            <!-- Viz -->
+            <div class="bg-gray-900 p-6 rounded-xl shadow-inner">
+                <h3 class="text-white font-bold mb-4">Visualisation : Classification Quantique</h3>
+                <div class="flex flex-col md:flex-row gap-4">
+                    <div id="qml-viz"
+                        class="flex-1 h-64 bg-black rounded border border-gray-700 flex items-center justify-center">
+                        <!-- Viz injected by initQML -->
+                        <p class="text-gray-500">Frontière de Décision</p>
+                    </div>
+                    <div class="w-full md:w-1/3 text-gray-400 text-sm">
+                        <p>Les points rouges et bleus sont séparés par une surface complexe générée par le circuit
+                            quantique.
+                        </p>
+                        <button onclick="trainQML()"
+                            class="mt-4 w-full px-4 py-2 bg-pink-600 text-white rounded hover:bg-pink-500 transition transform hover:scale-105 shadow-lg">Entraîner
+                            (Simulé) 🚀</button>
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
-</div>
