--- a/data/bases/math_symbols.html
+++ b/data/bases/math_symbols.html
@@ -82,6 +82,24 @@
                     <button onclick="selectSymbol('vec')"
                         class="aspect-square flex items-center justify-center text-xl font-serif hover:bg-indigo-50 hover:text-indigo-600 rounded border border-gray-100 transition symbol-btn"
                         data-id="vec">$\vec{v}$</button>
+                    <button onclick="selectSymbol('ket')"
+                        class="aspect-square flex items-center justify-center text-xl font-serif hover:bg-indigo-50 hover:text-indigo-600 rounded border border-gray-100 transition symbol-btn"
+                        data-id="ket">$| \psi \rangle$</button>
+                    <button onclick="selectSymbol('bra')"
+                        class="aspect-square flex items-center justify-center text-xl font-serif hover:bg-indigo-50 hover:text-indigo-600 rounded border border-gray-100 transition symbol-btn"
+                        data-id="bra">$\langle \psi |$</button>
+                    <button onclick="selectSymbol('hbar')"
+                        class="aspect-square flex items-center justify-center text-2xl font-serif hover:bg-indigo-50 hover:text-indigo-600 rounded border border-gray-100 transition symbol-btn"
+                        data-id="hbar">$\hbar$</button>
+                    <button onclick="selectSymbol('tensor')"
+                        class="aspect-square flex items-center justify-center text-2xl font-serif hover:bg-indigo-50 hover:text-indigo-600 rounded border border-gray-100 transition symbol-btn"
+                        data-id="tensor">$\otimes$</button>
+                    <button onclick="selectSymbol('dagger')"
+                        class="aspect-square flex items-center justify-center text-xl font-serif hover:bg-indigo-50 hover:text-indigo-600 rounded border border-gray-100 transition symbol-btn"
+                        data-id="dagger">$A^\dagger$</button>
+                    <button onclick="selectSymbol('psi')"
+                        class="aspect-square flex items-center justify-center text-2xl font-serif hover:bg-indigo-50 hover:text-indigo-600 rounded border border-gray-100 transition symbol-btn"
+                        data-id="psi">$\psi$</button>
                 </div>
             </div>
 
