Update js files

--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
         <span class="font-bold text-lg">🚀 Deep Math Academy</span>
         <button onclick="toggleSidebar()" class="p-2 focus:outline-none">
             <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path>
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7">
+                </path>
             </svg>
         </button>
     </div>
@@ -102,7 +103,10 @@
     </main>
 
     <script src="js/global.js"></script>
-    <script src="js/course.js"></script>
+    <script src="js/basics.js"></script>
+    <script src="js/algebra.js"></script>
+    <script src="js/analysis.js"></script>
+    <script src="js/stats.js"></script>
     <script src="js/quantum.js"></script>
 
 </body>
